Downgraded to JDK 1.8